# openenclave_ml_poc

./: .gitignore  AGENT.md  CMakeLists.txt  Dockerfile  README.md  Readme.md  docker-compose.deploy.yml  docker-compose.yaml  download_deps.sh  patch.diff  tokenize_script.py
.github/workflows/: ci-cd.yaml  main.yml
azure_setup/: docker_install.sh  setup.sh
backend/: go.mod  go.sum  main.go
common/: enclave.edl
enclave/: CMakeLists.txt  enclave.cpp
frontend/: index.html  script.js  style.css
helloworld/: CMakeLists.txt
helloworld/common/: helloworld.edl
helloworld/enclave/: CMakeLists.txt  enc.c  helloworld.conf  private.pem
helloworld/host/: CMakeLists.txt  host.c
host/: CMakeLists.txt  host.cpp
k8s/: deployment.yaml
model/: simple_model.onnx
model_creation/: main.py
scripts/: create_model.py  download_assets.sh  download_deps.sh  export_model.py
sentiment-analysis-backend/: CMakeLists.txt  Dockerfile  docker-compose.yaml  download_deps.sh  tokenize_script.py
sentiment-analysis-backend/backend/: go.mod  main.go
sentiment-analysis-backend/common/: enclave.edl
sentiment-analysis-backend/enclave/: enclave.conf  enclave_private.pem
sentiment-analysis-backend/host/: CMakeLists.txt  host.cpp
sentiment-analysis-frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
sentiment-analysis-frontend/app/: page.tsx
sentiment-analysis-frontend/lib/: supabase.ts
terraform/: cloud-init.yaml  main.tf  outputs.tf  variables.tf
